--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <!-- <link type="text/css" rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css"> -->
   <link rel="stylesheet" type="text/css" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" type="text/css">
+  <link rel="stylesheet" type="text/css" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+  <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+  <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" type="text/css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,40italic,600italic,700italic,300,400,600,700,800" type="text/css">
   <style type="text/css">
@@ -194,8 +197,8 @@
         <div class="span8 offset2 social">
           <!-- Social button are not included in default Bootstrap. -->
           <!-- http://noizwaves.github.io/bootstrap-social-buttons -->
-          <button class="btn btn-twitter"><i class="icon-twitter"></i></button>
-          <button class="btn btn-facebook"><i class="icon-facebook"></i></button>
+          <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+          <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
         </div>
         
       </div>
