populate my content

--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
       </div>
       <div class="span5 copy">
         <p>
-          The marketing copy uses the text-align CSS property to justify the text and the img-polaroid Bootstrap class to style the images, but is otherwise fairly straightforward. As with the content further up the page, the overall content is structured as two five column spans, each offset 1 span from the side. The marketing copy uses the text-align CSS property to justify the text and the img-polaroid Bootstrap class to style the images, but is otherwise fairly straightforward. As with the content further up the page, the overall content is structured as two five column spans, each offset 1 span from the side.
+          As we know, MOOCs developing rapidly, with more and more MOOC website, which make us choose a course more difficult.
+          Therefore, We want to build a website like <a href="http://dir.yahoo.com/">Yahoo Directory</a> to help people more easily find the desired MOOCs of study. This website will contain Coursera, edX, udacity and other MOOCs all the courses, and we will re-organization of the courses with various dimensions.
         </p>
       </div>
     </div>
@@ -223,7 +224,7 @@
     <div class="row-fluid section2">
       <div class="span5 offset1 copy copy-right">
         <p>
-          The marketing copy uses the text-align CSS property to justify the text and the img-polaroid Bootstrap class to style the images, but is otherwise fairly straightforward. As with the content further up the page, the overall content is structured as two five column spans, each offset 1 span from the side. The marketing copy uses the text-align CSS property to justify the text and the img-polaroid Bootstrap class to style the images, but is otherwise fairly straightforward. As with the content further up the page, the overall content is structured as two five column spans, each offset 1 span from the side.
+          Happy learning!
         </p>
       </div>
       <div class="span5 asset">
@@ -243,12 +244,12 @@
         <div class="accordion-group">
           <div class="accordion-heading">
             <a class="accordion-toggle" data-toggle"collapse" data-parent="#accordion2" href="#collapseOne">
-              What does FAQ stand for?
+              It's really to build it?
             </a>
           </div>
           <div id="collapseOne" class="accordion-body collapse">
             <div class="accordion-inner">
-              Frequently Asked Question.
+              You guess!
             </div>
           </div>
         </div>
