Edited ... in index.html on develop branch

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
   </style>
 </head>
 <body>
-  
+  <!-- This is edit on dev branch -->
+
+
   <!-- Mobile-friendly navbar adapted from example. -->
   <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
   <div class="navbar navbar-inverse navbar-fixed-top">
