Fixed staging bugs in develop branch.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
 </head>
 <body>
   <!-- This is edit on dev branch -->
+  <!-- Edit again on dev branch -->
+
 
 
   <!-- Mobile-friendly navbar adapted from example. -->
