--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-42940035-1', 'bitstart.net');
+  ga('create', 'UA-42940035-1', 'herokuapp.com');
   ga('send', 'pageview');
 
 </script>  
