--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
         <div class="span6 offset3 order">
           <!-- Standard Bootstrap button. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-          <button class="btn btn-success btn-large">Preorder</button>
+          <!-- <button class="btn btn-success btn-large">Preorder</button> -->
+          <a class="coinbase-button" data-code="fddad821e2019a6e40c371163b7c7f05" data-button-style="custom_large" href="https://coinbase.com/checkouts/fddad821e2019a6e40c371163b7c7f05">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
         </div>
         
         <div class="span8 offset2 social">
